# hive

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  server.json  smithery.yaml
.claude/: CLAUDE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
site/: astro.config.mjs  package-lock.json
site/public/: robots.txt
site/src/content/docs/: configuration.md  getting-started.md  getting-started.mdx  index.mdx
site/src/content/docs/guides/: benchmarks.md  prompts.md  troubleshooting.md  use-cases.md  vault-structure.md  worker-routing.md
site/src/content/docs/reference/: architecture.md  resources.md
site/src/content/docs/tools/: vault.md  worker.md
site/src/styles/: custom.css
src/hive/: __init__.py  budget.py  clients.py  config.py  frontmatter.py  relevance.py  server.py  usage.py  vault_server.py  worker_server.py
tests/: conftest.py  test_benchmark.py  test_budget.py  test_clients.py  test_config.py  test_frontmatter.py  test_integration.py  test_relevance.py  test_server.py  test_smoke.py  test_smoke_worker.py  test_usage.py  test_vault_server.py  test_worker_server.py
